# gpu_data_structures

./: .gitignore  .gitmodules  LICENSE  readme.md
kd-tree-cuda/: CMakeLists.txt  main.cu  test_correctness.cu  test_performance.cu
kd-tree-cuda/include/: builder.cuh  data.cuh  queries.cuh
kd-tree-cuda/src/: builder.cu  queries.cu
kd-tree-samples/: CMakeLists.txt
kd-tree-samples/benchmark/: main.cu
kd-tree-samples/benchmark/generators/: cube.cuh
kd-tree-samples/benchmark/kernels/: knn_global.cuh  knn_local.cuh  knn_shared.cuh  validation.cuh
kd-tree-samples/common/: helpers.cuh
kd-tree-samples/common/data/: pt-math.cu  world.cuh
kd-tree-samples/common/data/loader/: mitsuba3.cu  mitsuba3.cuh
kd-tree-samples/common/data/photon/: photon-file-manager.cu  photon-file-manager.cuh
kd-tree-samples/common/kdtree/: builder.cuh  constants.cuh  queries.cuh
kd-tree-samples/photon-mapper/: main.cu  world.cuh
kd-tree-samples/photon-mapper/cuda/: helpers.cu  photonEmitter.cu  photonEmitter.cuh
kd-tree-samples/ray-tracer/: main.cu  viewer.cu  viewer.cuh
kd-tree-samples/ray-tracer/cuda/: helpers.cu  pathTracer.cu  pathTracer.cuh
kd-tree-samples/scenes/cornell-box/: scene_v3.xml
kd-tree-samples/scenes/water-caustic/: scene_v3.xml
kdtree_cpu/: CMakeLists.txt  main.cpp
kdtree_cpu/src/: point.cpp  point.h
photon-emitter/: CMakeLists.txt
photon-emitter/scenes/cornell-box/: scene_v3.xml
photon-emitter/src/: main.cpp  main.cu  photon-emitter.cpp  photon-emitter.h  photon-file-manager.cpp  photon-file-manager.h  pt-math.cu  pt-math.cuh  viewer.cpp  viewer.cu  world.cuh  world.h
photon-emitter/src/cuda/: helpers.cu  photonEmitter.cu  photonEmitter.cuh  photonEmitter.h  photonUtils.h
photon-emitter/src/loader/: mitsuba3.cu  mitsuba3.cuh
photon-emitter/src/writer/: photon-file-manager.cpp  photon-file-manager.h
ray-tracer/: CMakeLists.txt
ray-tracer/src/loader/: mitsuba3.cpp  mitsuba3.h
rtrt_photon-mapping/: CMakeLists.txt
rtrt_photon-mapping/scenes/cornell-box/: scene_v3.xml
rtrt_photon-mapping/src/: main.cpp  main.cu  pt-math.cuh  viewer.cpp  viewer.cu  viewer.cuh  world.cuh  world.h
rtrt_photon-mapping/src/cuda/: helpers.cu  kdtree.cuh  pathTracer.cu  pathTracer.cuh  pathTracer.h
rtrt_photon-mapping/src/cuda/kdtree/: builder.cuh  queries.cuh
rtrt_photon-mapping/src/loader/: mitsuba3.cpp  mitsuba3.cu  mitsuba3.cuh
rtrt_photon-mapping/src/writer/: photon-file-manager.cu  photon-file-manager.cuh
